<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        style="@style/Widget.MaterialComponents.CardView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/cardview_margininner"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:weightSum="3"
            android:background="@drawable/square"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageBook"
                    android:layout_width="@dimen/imagecover_width"
                    android:layout_height="@dimen/imagecover_height"
                    android:layout_marginTop="@dimen/cardview_margininner"
                    android:layout_marginBottom="@dimen/cardview_margininner"
                    android:contentDescription="@string/item_book_descriptionimage"
                    android:layout_gravity="center"
                    android:src="@drawable/senhor_dos_aneis_as_duas_torres" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="6dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/item_book_title" />

                    <TextView
                        android:id="@+id/titleBook"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="6dp"
                        android:layout_weight="2"
                        android:text="@string/text_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/item_book_genero" />

                    <TextView
                        android:id="@+id/genreBook"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:layout_weight="2"
                        android:text="@string/text_genre" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/item_book_isbn" />

                    <TextView
                        android:id="@+id/isbnBook"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:layout_weight="2"
                        android:text="@string/text_isbn" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/item_book_resume" />

                    <TextView
                        android:id="@+id/resumeBook"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="6dp"
                        android:layout_weight="2"
                        android:text="@string/text_resume" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/item_book_authors" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/authorsBook"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_weight="2"
                        tools:listitem="@layout/item_author" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>